added publishing yaml

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.8",
     "@chromatic-com/storybook": "^5.0.0",
     "@storybook/addon-a11y": "^10.1.11",
     "@storybook/addon-docs": "^10.1.11",
