--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  id-token: write
 
 jobs:
   release:
@@ -24,10 +25,12 @@ jobs:
           registry-url: https://registry.npmjs.org
           cache: npm
 
+      - name: Upgrade npm
+        run: npm i -g npm@latest
+
       - name: Install dependencies
         run: npm ci
 
-      # Optional but recommended
       - name: Test
         run: npm test --if-present
 
@@ -37,9 +40,6 @@ jobs:
       - name: Create Release Pull Request or Publish
         uses: changesets/action@v1
         with:
-          # If you use a build step that needs to run before publish, keep this.
-          # Otherwise you can remove it.
-          publish: npm publish
+          publish: npm publish --access public
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
