updated imports for theme

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "build": "npm run build:types && vite build",
     "prepublishOnly": "npm run build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "release": "npm run build && npx changeset"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
